# chatstatbot

./: .gitignore  pyproject.toml  run.py
.ci/: Dockerfile
.github/workflows/: ci-cd.yml
app/: bot.py
app/handlers/: add_bot.py  error.py  main.py  revoke_token.py  stats.py
settings/: config.py
tools/: api.py  deco.py  menu_builder.py
